<resources>
    <string name="app_name">V剪辑</string>

    <!-- Applicaiton common -->
    <string name="msg_create_folder_error">文件夹创建过程中出现错误</string>
    <string name="msg_no_permission">权限不足，可能无法正常运行</string>

    <!-- HomeActivity(home) -->
    <string name="home_iv_editor">Editor</string>
    <string name="home_iv_player">Player</string>
    <string name="home_iv_recorder">Recorder</string>

    <!-- RecordActivity(record) -->
    <string name="record_btn_record">开始录制</string>
    <string name="record_btn_switch">切换相机</string>
    <string name="record_tv_beauty">磨皮</string>
    <string name="record_tv_saturate">红润</string>
    <string name="record_tv_bright">美白</string>


</resources>
