<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.zzh.videoeditor.activity.RecordActivity">

    <cn.zzh.videoeditor.view.CameraView
        android:id="@+id/record_cv_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:beauty_on_front="true"
        app:focus_height="@dimen/image_normal_size"
        app:focus_width="@dimen/image_normal_size"
        app:indicator_height="@dimen/image_normal_size"
        app:indicator_width="@dimen/image_normal_size" />

    <LinearLayout
        android:id="@+id/record_ll_control_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_tv_beauty" />

            <SeekBar
                android:id="@+id/record_sb_beauty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_tv_saturate" />

            <SeekBar
                android:id="@+id/record_sb_saturate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_tv_bright" />

            <SeekBar
                android:id="@+id/record_sb_bright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/margin_normal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/record_btn_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_btn_record" />

        <Button
            android:id="@+id/record_btn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_btn_switch" />
    </LinearLayout>

</FrameLayout>
